<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_view"
        android:key="@string/pref_header_view">

        <SwitchPreference
            android:defaultValue="true"
            android:key="view_help"
            android:title="@string/pref_view_help" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="view_log"
            android:title="@string/pref_view_log" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="view_send"
            android:title="@string/pref_view_send" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="view_dpad"
            android:title="@string/pref_view_dpad" />
    </PreferenceCategory>

</PreferenceScreen>
